--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,6 +28,6 @@ jobs:
         mention_if: 'failure'
         channel: '#github-actions'
         url: ${{ secrets.ROCKETCHAT_WEBHOOK }}
-        message: 'testing message field'  
+        #message: 'testing message field'  
         commit: 'true'
         token: ${{ secrets.GITHUB_TOKEN }}
