--- a/action.yml
+++ b/action.yml
@@ -36,6 +36,9 @@ inputs:
   message:
     description: enter custom message here
     required: false
+  userNameWhoTriggeredTheWorkflow:
+    description: Define User name who ran the workfloe - ${{ github.actor }}
+    required: true
 runs:
   using: 'node12'
   main: 'dist/index.js'
