--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,22 +28,21 @@ jobs:
     #       ls 
     - name: Shell command
       run: |
-        echo "${{ github.job }}"
-        echo "${{ job.container }}"
-        
-    - name: my actions
-      uses: harsh896/rocketChat-notification-github-actions@master
-      if: always()
-      with:
-        type: ${{ job.status }}
-        job_name: '*${{ github.workflow }}* Github Action'
-        userNameWhoTriggeredTheWorkflow: "${{ github.actor }}"
-        #icon_emoji: ${{ env.EMOJI }}
-        mention: 'all'
-        mention_if: 'failure'
-        channel: '#github-actions'
-        url: ${{ secrets.ROCKETCHAT_WEBHOOK }}
-        #message: 'testing message field'  
-        commit: 'true'
-        token: ${{ secrets.GITHUB_TOKEN }}
+        echo "${{ github.github.run_id }}"
+
+    # - name: my actions
+    #   uses: harsh896/rocketChat-notification-github-actions@master
+    #   if: always()
+    #   with:
+    #     type: ${{ job.status }}
+    #     job_name: '*${{ github.workflow }}* Github Action'
+    #     userNameWhoTriggeredTheWorkflow: "${{ github.actor }}"
+    #     #icon_emoji: ${{ env.EMOJI }}
+    #     mention: 'all'
+    #     mention_if: 'failure'
+    #     channel: '#github-actions'
+    #     url: ${{ secrets.ROCKETCHAT_WEBHOOK }}
+    #     #message: 'testing message field'  
+    #     commit: 'true'
+    #     token: ${{ secrets.GITHUB_TOKEN }}
         
