--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,23 +26,20 @@ jobs:
     #     port: ${{ secrets.STAGE_PORT }}
     #     script: |
     #       ls 
-    - name: Shell command
-      run: |
-        echo "${{ github.run_number }}"
 
-    # - name: my actions
-    #   uses: harsh896/rocketChat-notification-github-actions@master
-    #   if: always()
-    #   with:
-    #     type: ${{ job.status }}
-    #     job_name: '*${{ github.workflow }}* Github Action'
-    #     userNameWhoTriggeredTheWorkflow: "${{ github.actor }}"
-    #     #icon_emoji: ${{ env.EMOJI }}
-    #     mention: 'all'
-    #     mention_if: 'failure'
-    #     channel: '#github-actions'
-    #     url: ${{ secrets.ROCKETCHAT_WEBHOOK }}
-    #     #message: 'testing message field'  
-    #     commit: 'true'
-    #     token: ${{ secrets.GITHUB_TOKEN }}
+    - name: my actions
+      uses: harsh896/rocketChat-notification-github-actions@master
+      if: always()
+      with:
+        type: ${{ job.status }}
+        id: ${{ github.run_number }}
+        job_name: '*${{ github.workflow }}* Github Action'
+        userNameWhoTriggeredTheWorkflow: "${{ github.actor }}"
+        mention: 'all'
+        mention_if: 'failure'
+        channel: '#DevOps_Crew'
+        url: ${{ secrets.ROCKETCHAT_WEBHOOK }}
+        message: Teting Message  
+        commit: 'true'
+        token: ${{ secrets.GITHUB_TOKEN }}
         
