--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,35 +17,6 @@ jobs:
     - name: checkout
       uses: actions/checkout@v2
 
-    - name: Shell Commands
-      run: |
-        echo ${{ github.event.comment }}
-        echo ${{ github.action }}
-        echo ${{ github.action_path }}
-        echo ${{ github.actor }}
-        echo ${{ github.base_ref }}
-        echo ${{ github.event }}
-        echo ${{ github.event_name }}
-        echo ${{ github.head_ref }}
-        echo ${{ github.job }}
-        echo ${{ github.ref }}
-        echo ${{ github.repository }}
-        echo ${{ github.repository_owner }}
-        echo ${{ github.run_id }}
-        echo ${{ github.run_number }}
-        echo ${{ github.sha }}
-        echo ${{ github.token }}
-        echo ${{ github.workflow }}
-        echo ${{ github.workspace }}
-        
-
-        echo ${{ job }}
-        echo ${{ job.container }}
-        echo ${{ job.container.id }}
-        echo ${{ job.container.network }}
-        echo ${{ job.services }}
-        echo ${{ job.status }}
-
     # - name: ssh into server and running first-gitcexconfig ansible playbook
     #   uses: appleboy/ssh-action@master
     #   with:
@@ -56,19 +27,19 @@ jobs:
     #     script: |
     #       ls 
 
-    # - name: my actions
-    #   uses: harsh896/rocketChat-notification-github-actions@master
-    #   if: always()
-    #   with:
-    #     type: ${{ job.status }}
-    #     id: ${{ github.run_number }}
-    #     job_name: '*${{ github.workflow }}* Github Action'
-    #     userNameWhoTriggeredTheWorkflow: "${{ github.actor }}"
-    #     mention: 'all'
-    #     mention_if: 'failure'
-    #     channel: '#github-actions'
-    #     url: ${{ secrets.ROCKETCHAT_WEBHOOK }}
-    #     message: Teting Message  
-    #     commit: 'true'
-    #     token: ${{ secrets.GITHUB_TOKEN }}
+    - name: my actions
+      uses: harsh896/rocketChat-notification-github-actions@master
+      if: always()
+      with:
+        type: ${{ job.status }}
+        id: ${{ github.run_number }}
+        job_name: '*${{ github.workflow }}* Github Action'
+        userNameWhoTriggeredTheWorkflow: "${{ github.actor }}"
+        mention: 'here'
+        mention_if: 'failure'
+        channel: '#github-actions'
+        url: ${{ secrets.ROCKETCHAT_WEBHOOK }}
+        message: Teting Message  
+        commit: 'true'
+        token: ${{ secrets.GITHUB_TOKEN }}
         
