--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,30 +16,34 @@ jobs:
     steps:
     - name: checkout
       uses: actions/checkout@v2
+    
+    - name: shell
+      run: |
+        echo "${{toJSON(github.event)}}"
 
-    - name: ssh into server and running first-gitcexconfig ansible playbook
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.STAGE_HOST }}
-        username: ${{ secrets.STAGE_USERNAME }}
-        key: ${{ secrets.STAGE_KEY }}
-        port: ${{ secrets.STAGE_PORT }}
-        script: |
-          ls 
+    # - name: ssh into server and running first-gitcexconfig ansible playbook
+    #   uses: appleboy/ssh-action@master
+    #   with:
+    #     host: ${{ secrets.STAGE_HOST }}
+    #     username: ${{ secrets.STAGE_USERNAME }}
+    #     key: ${{ secrets.STAGE_KEY }}
+    #     port: ${{ secrets.STAGE_PORT }}
+    #     script: |
+    #       ls 
 
-    - name: my actions
-      uses: harsh896/rocketChat-notification-github-actions@master
-      if: always()
-      with:
-        type: ${{ job.status }}
-        id: ${{ github.run_number }}
-        job_name: '*${{ github.workflow }}* Github Action'
-        userNameWhoTriggeredTheWorkflow: "${{ github.actor }}"
-        mention: 'here'
-        mention_if: 'failure'
-        channel: '#github-actions'
-        url: ${{ secrets.ROCKETCHAT_WEBHOOK }}
-        message: Teting Message  
-        commit: 'true'
-        token: ${{ secrets.GITHUB_TOKEN }}
+    # - name: my actions
+    #   uses: harsh896/rocketChat-notification-github-actions@master
+    #   if: always()
+    #   with:
+    #     type: ${{ job.status }}
+    #     id: ${{ github.run_number }}
+    #     job_name: '*${{ github.workflow }}* Github Action'
+    #     userNameWhoTriggeredTheWorkflow: "${{ github.actor }}"
+    #     mention: 'here'
+    #     mention_if: 'failure'
+    #     channel: '#github-actions'
+    #     url: ${{ secrets.ROCKETCHAT_WEBHOOK }}
+    #     message: Teting Message  
+    #     commit: 'true'
+    #     token: ${{ secrets.GITHUB_TOKEN }}
         
