--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,19 +31,22 @@ jobs:
     #     script: |
     #       ls 
 
-    # - name: my actions
-    #   uses: harsh896/rocketChat-notification-github-actions@master
-    #   if: always()
-    #   with:
-    #     type: ${{ job.status }}
-    #     id: ${{ github.run_number }}
-    #     job_name: '*${{ github.workflow }}* Github Action'
-    #     userNameWhoTriggeredTheWorkflow: "${{ github.actor }}"
-    #     mention: 'here'
-    #     mention_if: 'failure'
-    #     channel: '#github-actions'
-    #     url: ${{ secrets.ROCKETCHAT_WEBHOOK }}
-    #     message: Teting Message  
-    #     commit: 'true'
-    #     token: ${{ secrets.GITHUB_TOKEN }}
+    - name: my actions
+      uses: harsh896/rocketChat-notification-github-actions@master
+      if: always()
+      with:
+        type: ${{ job.status }}
+        id: ${{ github.run_number }}
+        job_name: '*${{ github.workflow }}* Github Action'
+        userNameWhoTriggeredTheWorkflow: "${{ github.actor }}"
+        mention: 'here'
+        mention_if: 'failure'
+        channel: '#github-actions'
+        url: ${{ secrets.ROCKETCHAT_WEBHOOK }}
+        message: Teting Message  
+        commit: 'true'
+        commitMesage: ${{ github.event.head_commit.message }}
+        commitUrl: ${{ github.event.head_commit.url }}
+        commitAuthor: ${{ github.event.head_commit.committer.name }}
+        #token: ${{ secrets.GITHUB_TOKEN }}
         
