--- a/action.yml
+++ b/action.yml
@@ -42,6 +42,15 @@ inputs:
   id:
     description: Define Id number of the particular pipeline
     required: true
+  commitUrl:
+    description: Define this input if commit input value is true
+    required: false
+  commitMessage:
+    description: Define this input if commit input value is true
+    required: false
+  commitAuthor:
+    description: Define this input if commit input value is true
+    required: false
 runs:
   using: 'node12'
   main: 'dist/index.js'
