--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,7 +45,7 @@ jobs:
         url: ${{ secrets.ROCKETCHAT_WEBHOOK }}
         message: Teting Message  
         commit: 'true'
-        commitMesage: ${{ github.event.head_commit.message }}
+        commitMessage: ${{ github.event.head_commit.message }}
         commitUrl: ${{ github.event.head_commit.url }}
         commitAuthor: ${{ github.event.head_commit.committer.name }}
         #token: ${{ secrets.GITHUB_TOKEN }}
