finding step values - 2

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,15 +21,17 @@ jobs:
       run: |
         echo "${{toJSON(steps)}}"
 
-    # - name: ssh into server and running first-gitcexconfig ansible playbook
-    #   uses: appleboy/ssh-action@master
-    #   with:
-    #     host: ${{ secrets.STAGE_HOST }}
-    #     username: ${{ secrets.STAGE_USERNAME }}
-    #     key: ${{ secrets.STAGE_KEY }}
-    #     port: ${{ secrets.STAGE_PORT }}
-    #     script: |
-    #       ls 
+    - name: ssh into server and running first-gitcexconfig ansible playbook
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.STAGE_HOST }}
+        username: ${{ secrets.STAGE_USERNAME }}
+        key: ${{ secrets.STAGE_KEY }}
+        port: ${{ secrets.STAGE_PORT }}
+        script: |
+          ls 
+      run: |
+        echo "${{toJSON(steps)}}"
 
     # - name: my actions
     #   uses: harsh896/rocketChat-notification-github-actions@master
