--- a/.github/workflows/feature.yml
+++ b/.github/workflows/feature.yml
@@ -1,10 +1,10 @@
-name: Rocket chat notification
+name: Feature Branch
 
 on:
   workflow_dispatch:
   push:
     branches:
-      - master
+      - feature/commit
 
 # Jobs
 jobs:
@@ -17,9 +17,9 @@ jobs:
     - name: checkout
       uses: actions/checkout@v2
     
-    - name: shell
-      run: |
-        echo "${{toJSON(github.event)}}"
+    # - name: shell
+    #   run: |
+    #     echo "${{toJSON(github.event)}}"
 
     # - name: ssh into server and running first-gitcexconfig ansible playbook
     #   uses: appleboy/ssh-action@master
@@ -32,7 +32,7 @@ jobs:
     #       ls 
 
     - name: my actions
-      uses: harsh896/rocketChat-notification-github-actions@master
+      uses: harsh896/rocketChat-notification-github-actions@feature/commit
       if: always()
       with:
         type: ${{ job.status }}
