--- a/.github/workflows/feature.yml
+++ b/.github/workflows/feature.yml
@@ -5,6 +5,12 @@ on:
   push:
     branches:
       - feature/commit
+    tags:
+      - 'v*'
+  pull_request:
+    branches:
+      - main
+    types: [closed]
 
 # Jobs
 jobs:
@@ -21,15 +27,15 @@ jobs:
     #   run: |
     #     echo "${{toJSON(github.event)}}"
 
-    # - name: ssh into server and running first-gitcexconfig ansible playbook
-    #   uses: appleboy/ssh-action@master
-    #   with:
-    #     host: ${{ secrets.STAGE_HOST }}
-    #     username: ${{ secrets.STAGE_USERNAME }}
-    #     key: ${{ secrets.STAGE_KEY }}
-    #     port: ${{ secrets.STAGE_PORT }}
-    #     script: |
-    #       ls 
+    - name: ssh into server and running first-gitcexconfig ansible playbook
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.STAGE_HOST }}
+        username: ${{ secrets.STAGE_USERNAME }}
+        key: ${{ secrets.STAGE_KEY }}
+        port: ${{ secrets.STAGE_PORT }}
+        script: |
+          ls 
 
     - name: my actions
       uses: harsh896/rocketChat-notification-github-actions@feature/commit
